Fixed multiline string attribute overflowing in non-edit mode

--- a/src/WebComponents/Attributes/PersistentObjectAttributeMultiLineString/persistent-object-attribute-multi-line-string.scss
+++ b/src/WebComponents/Attributes/PersistentObjectAttributeMultiLineString/persistent-object-attribute-multi-line-string.scss
@@ -11,4 +11,8 @@
     pre, textarea {
 		color: var(--vi-persistent-object-attribute-foreground, --theme-foreground);
 	}
+
+    pre {
+        white-space: pre-line;
+    }
 }
