--- a/src/WebComponents/PersistentObjectAttributePresenter/persistent-object-attribute-presenter.scss
+++ b/src/WebComponents/PersistentObjectAttributePresenter/persistent-object-attribute-presenter.scss
@@ -104,6 +104,7 @@
     #content {
         @include layout-horizontal();
         @include flex();
+        overflow: hidden;
 
         .attribute {
             @include flex();
